# Server_Side_Event

./: Cargo.toml
src/: index.html  main.rs  sse.html
