[package]
name = "sse"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = { version = "0.3.6", default-features = false }
axum = "0.8.4"
futures = { version = "0.3.31", default-features = false }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "sync"] }
tower-http = { version = "0.6.6", features = ["cors"] }
